<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_dialog"
    android:backgroundTint="@color/background_secondary"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="24dp"
    android:paddingEnd="20dp"
    android:paddingBottom="24dp">

    <!-- Top close button -->
    <ImageButton
            android:id="@+id/button_close"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="end"
            android:layout_marginBottom="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_close"
            android:src="@android:drawable/ic_menu_close_clear_cancel"/>

    <!-- Profile image preview -->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_marginBottom="24dp"
                 android:layout_height="200dp">

        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image_preview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_background"
                app:backgroundTint="@color/surface_card"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/person_outlined_24px"/>

        <ImageButton
                android:id="@+id/confirm_button"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/check_24px"
                android:visibility="gone"
                style="@style/Widget.CineBook.Button"
                android:contentDescription="@string/action_confirm"
                android:layout_gravity="end"/>
    </FrameLayout>

    <!-- Buttons -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_take_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:text="@string/take_picture"
                style="@style/Widget.CineBook.Button.Outlined"
                android:layout_marginEnd="8dp"
                app:icon="@drawable/ic_camera"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pick_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_gallery"
                style="@style/Widget.CineBook.Button.Outlined"
                app:icon="@drawable/ic_photo_library"/>
    </LinearLayout>



</LinearLayout>